# sphinx-starlight-builder

./: Makefile  README.md  pyproject.toml
sphinx_markdown_builder/: __init__.py  builder.py  contexts.py  translator.py
sphinx_starlight_builder/: __init__.py  builder.py  contexts.py  escape.py  translator.py  writer.py
tests/: test_builder.py  test_unit.py
tests/expected/: auto-summery.md  image-target.md  overrides-auto-summery.md
tests/source/: auto-summery.rst  conf.py  image-target.rst
