# sphinx-starlight-builder

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-starlight-builder"
version = "0.6.7"
description = "A Sphinx extension to add starlight mdx generation support."
readme = "README.md"
authors = [{ name = "Joe Polny", email = "joepolny@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["sphinx", "sphinx-extention", "markdown", "docs", "documentation", "builder"]
dependencies = ["sphinx>=5.1.0", "tabulate", "docutils"]
requires-python = ">=3.7"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."sphinx.builders"]
"starlight" = "sphinx_starlight_builder"

[project.entry-points."sphinx.builders"]
"starlight" = "sphinx_starlight_builder"

[project.optional-dependencies]
dev = [
    "sphinx>=5.3.0", # For development, we need a higher version for the tests' outputs to be identical.
    "bumpver", "black", "isort", "flake8", "pylint", "pip-tools", "pytest", "pytest-cov", "coveralls",
    "sphinxcontrib-plantuml", "sphinxcontrib.httpdomain",
]

[project.urls]
Homepage = "https://github.com/joe-p/sphinx-starlight-builder"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    "current_version = \"{version}\"",
    "version = \"{version}\"",
]
"README.md" = [
    "sphinx-starlight-builder=={version}",
]
"LICENSE" = [
    "Copyright (c) 2023-YYYY, Liran Funaro.",
]
"sphinx_starlight_builder/__init__.py" = [
    "^__version__ = \"{version}\"$",
]
"tests/source/conf.py" = [
    "^version = \"{version}\"$",
]
"tests/expected/overrides-auto-summery.md" = [
    "<meta name=\"version\" content=\"{version}\"/>",
    "<meta name=\"copyright\" content=\"Copyright (c) 2023-YYYY, Liran Funaro.\"/>",
]
"tests/expected/overrides-auto-module.md" = [
    "<meta name=\"version\" content=\"{version}\"/>",
    "<meta name=\"copyright\" content=\"Copyright (c) 2023-YYYY, Liran Funaro.\"/>",
]

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120
max-args = 6
